--- a/JAVASCRIPT/Aula 12 - Introducao_JavaScript/lanschool/index.html
+++ b/JAVASCRIPT/Aula 12 - Introducao_JavaScript/lanschool/index.html
@@ -19,7 +19,14 @@
     <div class="caixaQuery">Caixa 2</div>
     
     <input type="text" name="nome" placeholder="Digite seu nome">
+    <button onclick="alteraTexto()">Mudar Texto</button>
+
     
+
+
+    <input type="text" name="Sobrenome" placeholder="Digite seu sobrenome">
+    <button onclick="alteraParagrafo()">Modificar texto</button>
     <script src="script.js"></script>
+
 </body>
 </html>
